# local-rag

./: README.md  docker-compose.yml  enums.py  pyproject.toml  start-ollama.sh
backend/: Dockerfile  enums.py  llm.py  main.py  requirements.txt
backend/requirements/: dev.txt  project.txt
frontend/: Dockerfile  app.py  requirements.txt
